--- a/style.css
+++ b/style.css
@@ -2,23 +2,32 @@ html {
   background: #2d352e;
 }
 
-div {
+.mainDiv {
+  position: absolute;
   height: 5000px;
   width: 100%;
-  /* position: ; */
+  top: 0;
 }
 
 .svg {
   width: 90%;
+  /* height: 100%; */
   position: absolute;
   left: 0;
   right: 0;
-  bottom: 0;
   margin: 0 auto;
+  transform: translateY(-50%);
+}
+
+.topDiv {
+  position: absolute;
+  width: 100%;
+  height: 40%;
 }
 
 .top {
-  top: 750px;
+  top: 61%;
+  height: 59%;
 }
 
 .middle {
@@ -54,4 +63,26 @@ div {
   top: -12%;
   z-index: 3;
   left: 6%;
+}
+
+.bg {
+  position: absolute;
+  top: 32%;
+  left: 0;
+  width: 68%;
+  height: 59%;
+  z-index: 3;
+  right: 0;
+  margin: -36% auto;
+}
+
+.bgDiv {
+  position: absolute;
+  top: 328px;
+  left: 0;
+  margin: 0 auto;
+  width: 68%;
+  z-index: 3;
+  box-sizing: inherit;
+  right: 0;
 }
