--- a/style.css
+++ b/style.css
@@ -1,41 +1,25 @@
-html {
-  background: #2d352e;
+html,
+body {
+  /* background: #2d352e; */
+  margin: 0;
 }
 
 .mainDiv {
   position: absolute;
-  height: 5000px;
+  height: 327.5vw;
   width: 100%;
-  top: 0;
+  max-width: 1110px;
+  max-height: 3635.25px;
+  /* background: #0080001c; */
+  left: 0;
+  top: 50%;
 }
 
 .svg {
-  width: 90%;
-  /* height: 100%; */
   position: absolute;
   left: 0;
   right: 0;
   margin: 0 auto;
-  transform: translateY(-50%);
-}
-
-.topDiv {
-  position: absolute;
-  width: 100%;
-  height: 40%;
-}
-
-.top {
-  top: 61%;
-  height: 59%;
-}
-
-.middle {
-  top: 2400px;
-}
-
-.bottom {
-  top: 3450px;
 }
 
 .Layer_1 {
@@ -51,38 +35,60 @@ html {
 }
 
 .Layer_3 {
-  stroke: #2775e2;
+  /* stroke: #2775e2; */
+  stroke: #ff9b12;
   filter: blur(2px);
   z-index: 1;
   stroke-width: 2;
 }
 
-.comp {
-  position: fixed;
-  width: 33%;
-  top: -12%;
-  z-index: 3;
-  left: 6%;
+
+.topDiv {
+  position: absolute;
+  width: 100%;
+  height: 40%;
 }
 
-.bg {
+.toppic {
   position: absolute;
-  top: 32%;
-  left: 0;
+  top: 3%;
+  left: 7%;
   width: 68%;
-  height: 59%;
   z-index: 3;
   right: 0;
-  margin: -36% auto;
 }
 
-.bgDiv {
+.top {
+  top: 10%;
+  width: 100%;
+}
+
+.middlepic {
   position: absolute;
-  top: 328px;
-  left: 0;
+  top: 39%;
+  left: -3%;
+  width: 80%;
+  z-index: 3;
+  right: 0;
   margin: 0 auto;
-  width: 68%;
-  z-index: 3;
-  box-sizing: inherit;
+}
+
+.middle {
+  top: 43%;
+  width: 95%;
+}
+
+.bottompic {
+  position: absolute;
+  top: 79.3%;
+  left: 1.5%;
+  width: 89%;
+  z-index: 0;
   right: 0;
+  margin: 0 auto;
+}
+
+.bottom {
+  top: 70%;
+  width: 90%;
 }
