--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ html,
 body {
   /* background: #2d352e; */
   margin: 0;
+  font-family: 'YanoneKaffeesatz';
 }
 
 .mainDiv {
@@ -13,6 +14,15 @@ body {
   /* background: #0080001c; */
   left: 0;
   top: 50%;
+  right: 0;
+  margin: 0 auto;
+}
+
+.logo {
+  position: absolute;
+  width: 51%;
+  left: 40%;
+  top: 3%;
 }
 
 .svg {
@@ -91,4 +101,47 @@ body {
 .bottom {
   top: 70%;
   width: 90%;
+}
+
+.understanding {
+  position: absolute;
+  width: 34%;
+  left: 40%;
+  top: 4%;
+  font-size: 2.4rem;
+  font-weight: 400;
+}
+
+.eLearning {
+  position: absolute;
+  width: 41%;
+  left: 40%;
+  top: 7.5%;
+  line-height: 1.2rem;
+  font-family: Roboto;
+}
+
+.view-video {
+  position: absolute;
+  width: 18%;
+  left: 65%;
+  top: 9.4%;
+  font-family: 'YanoneKaffeesatz';
+  background: #ff9901;
+  border: none;
+  padding: 0%;
+  border-radius: 5px;
+  color: white;
+  height: 1%;
+  font-size: 2rem;
+  margin: 0%;
+  box-shadow: -1px 2px 5px #00000047;
+}
+
+.menu {
+  position: absolute;
+}
+
+.menus-des {
+  position: absolute;
 }
