--- a/project/css/style.css
+++ b/project/css/style.css
@@ -179,7 +179,7 @@ span {
   position: absolute;
   top: 67%;
   width: 63%;
-  left: 18.5%;
+  left: 18.9%;
   z-index: 1;
   height: 30%;
   overflow: hidden;
@@ -190,7 +190,7 @@ span {
   width: 100%;
   height: 100%;
   left: 0%;
-  transition: all 0.1s linear;
+  transition: all 0.5s linear;
 }
 
 .iframeContainer :nth-child(1) {
@@ -251,6 +251,7 @@ span {
   width: 1.5%;
   height: 1.2%;
   background: #ff990199;
+  cursor: pointer;
 }
 
 .dotActive {
@@ -258,23 +259,23 @@ span {
 
 }
 
-.dot1 {
+.dot0 {
   left: 40%;
 }
 
-.dot2 {
+.dot1 {
   left: 45%;
 }
 
-.dot3 {
+.dot2 {
   left: 50%;
 }
 
-.dot4 {
+.dot3 {
   left: 55%;
 }
 
-.dot5 {
+.dot4 {
   left: 60%;
 }
 
