--- a/project/css/style.css
+++ b/project/css/style.css
@@ -180,9 +180,11 @@ span {
   top: 67%;
   width: 63%;
   left: 18.9%;
-  z-index: 1;
-  height: 30%;
+  z-index: 2;
+  height: 28.26%;
   overflow: hidden;
+  background: white;
+  border-radius: 20px;
 }
 
 .iframeContainer img {
@@ -190,7 +192,7 @@ span {
   width: 100%;
   height: 100%;
   left: 0%;
-  transition: all 0.5s linear;
+  transition: all 0.5s cubic-bezier(0.6, 1.67, 1, 1);
 }
 
 .iframeContainer :nth-child(1) {
@@ -320,12 +322,40 @@ span {
   left: 10%;
 }
 
+.interactionIframe.hidden {
+  height: 0%;
+}
+
+.interactionIframe {
+  position: absolute;
+  top: 58%;
+  width: 100%;
+  height: 15.5%;
+  transition: all 1s ease-in-out;
+}
+
+iframe.hidden {
+  position: absolute;
+  height: 0%;
+}
+
+iframe {
+  position: absolute;
+  width: 89%;
+  height: 100%;
+  border: none;
+  box-sizing: border-box;
+  left: 5.5%;
+  border-radius: 4px;
+}
+
 /* options */
 .optionsContainer {
   position: absolute;
   width: 100%;
   height: 15.5%;
   top: 58.5%;
+  transition: all 1s ease-in-out;
 }
 
 .option {
@@ -334,15 +364,27 @@ span {
   height: 48%;
   width: 28%;
   background: white;
+  overflow: hidden;
+  cursor: pointer;
 }
 
 .optionImgContainer {
   position: absolute;
+  width: 100%;
+  height: 54%;
+  overflow: hidden;
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.27);
+}
+
+.optionImgContainer img {
+  position: absolute;
+  width: 100%;
+  height: 140%;
 }
 
 .optionHeader {
   position: absolute;
-  top: 53%;
+  top: 57%;
   font-size: 1.8rem;
   font-weight: 400;
   left: 4%;
@@ -350,8 +392,8 @@ span {
 
 .optionDescription {
   position: absolute;
-  top: 71%;
-  font-size: 0.8rem;
+  top: 74%;
+  font-size: 0.85rem;
   left: 4.1%;
 }
 
@@ -399,6 +441,7 @@ span {
   right: 0;
   margin: 0 auto;
   z-index: -1;
+  transition: all 1s ease-in-out;
 }
 
 .bottompic {
@@ -414,4 +457,45 @@ span {
 .bottom {
   top: 0%;
   width: 100%;
+}
+
+.see-more {
+  position: absolute;
+  top: 22%;
+  left: 35%;
+  font-size: 3.2rem;
+  width: 31%;
+  text-align: center;
+}
+
+.lets-go {
+  position: absolute;
+  top: 36%;
+  left: 37.5%;
+  width: 25%;
+  height: 9%;
+  border: 3px solid black;
+  border-radius: 4px;
+  font-size: 4rem;
+  background: gainsboro;
+  text-align: unset;
+  font-family: 'YanoneKaffeesatz';
+  box-shadow: -2px 3px 8px 0px rgba(0, 0, 0, 0.68);
+}
+
+.btn-text {
+  color: black;
+  text-align: right;
+  position: absolute;
+  top: 4%;
+  left: 9%;
+}
+
+.btn-arrow {
+  color: black;
+  text-align: right;
+  position: absolute;
+  left: 76%;
+  font-size: 4.5rem;
+  top: 0%;
 }
