--- a/project/css/style.css
+++ b/project/css/style.css
@@ -2,7 +2,7 @@ html,
 body {
   /* background: #2d352e; */
   margin: 0;
-  font-family: 'YanoneKaffeesatz';
+  font-family: "YanoneKaffeesatz";
 }
 
 h1,
@@ -57,8 +57,6 @@ span {
   opacity: 0.7;
 }
 
-
-
 /* container around everything */
 .mainDiv {
   position: absolute;
@@ -72,7 +70,6 @@ span {
   right: 0;
   margin: 0 auto;
 }
-
 
 /* top section */
 .topContainer {
@@ -145,7 +142,7 @@ span {
   width: 26%;
   left: 43%;
   top: 86.4%;
-  font-family: 'YanoneKaffeesatz';
+  font-family: "YanoneKaffeesatz";
   background: #ff9901;
   border: none;
   padding: 0%;
@@ -258,7 +255,6 @@ span {
 
 .dotActive {
   background: #ff9901;
-
 }
 
 .dot0 {
@@ -323,15 +319,22 @@ span {
 }
 
 .interactionIframe.hidden {
-  height: 0%;
+  display: none;
+}
+
+.interactionIframe.hidden iframe {
+  top: 35%;
+  opacity: 0;
 }
 
 .interactionIframe {
-  position: absolute;
-  top: 58%;
+  position: fixed;
+  top: 0;
   width: 100%;
-  height: 15.5%;
+  height: 100%;
   transition: all 1s ease-in-out;
+  z-index: 100;
+  background: rgba(0, 0, 0, 0.27);
 }
 
 iframe.hidden {
@@ -341,12 +344,15 @@ iframe.hidden {
 
 iframe {
   position: absolute;
-  width: 89%;
-  height: 100%;
+  width: 69%;
+  top: 50%;
+  height: 46%;
   border: none;
   box-sizing: border-box;
-  left: 5.5%;
+  left: 50%;
   border-radius: 4px;
+  transition: all 0.8s ease-out;
+  transform: translate(-50%, -50%);
 }
 
 /* options */
@@ -479,7 +485,7 @@ iframe {
   font-size: 4rem;
   background: gainsboro;
   text-align: unset;
-  font-family: 'YanoneKaffeesatz';
+  font-family: "YanoneKaffeesatz";
   box-shadow: -2px 3px 8px 0px rgba(0, 0, 0, 0.68);
 }
 
