--- a/project/css/style.css
+++ b/project/css/style.css
@@ -193,11 +193,12 @@ span {
   z-index: 2;
   height: 28.26%;
   overflow: hidden;
-  background: white;
-  border-radius: 20px;
+  /* background: white; */
+  /* border-radius: 20px; */
 }
 
-.iframeContainer img {
+.iframeContainer iframe {
+  border: none;
   position: absolute;
   width: 100%;
   height: 100%;
@@ -358,7 +359,7 @@ iframe.hidden {
   height: 0%;
 }
 
-iframe {
+#interactionIframe {
   position: absolute;
   width: 69%;
   top: 50%;
@@ -374,7 +375,7 @@ iframe {
   transform: translate(-50%, -50%);
 }
 
-iframe body {
+#interactionIframe body {
   background-color: none;
 }
 
