--- a/project/css/style.css
+++ b/project/css/style.css
@@ -306,7 +306,7 @@ span {
 
 .middlepic {
   position: absolute;
-  top: 0.5%;
+  top: 1%;
   left: -3%;
   width: 80%;
   z-index: 3;
@@ -600,4 +600,16 @@ iframe.hidden {
   left: 76%;
   font-size: 4.5rem;
   top: 0%;
+  height: 100%;
+  width: 22%;
+}
+
+.btn-arrow img {
+  width: 92%;
+  transform: translateY(-50%);
+  /* margin: 50% auto; */
+  display: block;
+  position: absolute;
+  top: 50%;
+  height: 54%;
 }
