--- a/project/css/style.css
+++ b/project/css/style.css
@@ -306,22 +306,26 @@ span {
 
 .middlepic {
   position: absolute;
-  top: 1%;
-  left: -3%;
+  top: 1.3%;
+  left: -1%;
   width: 80%;
   z-index: 3;
   right: 0;
   margin: 0 auto;
-  animation: hover 2s ease-in-out infinite alternate;
+  animation: hover 3s ease-in-out infinite;
 }
 
 @keyframes hover {
   0% {
-    transform: translateY(-0%);
+    top: 1%;
+  }
+
+  50% {
+    top: -1%;
   }
 
   100% {
-    transform: translateY(-4%);
+    top: 1%;
   }
 }
 
@@ -373,7 +377,7 @@ iframe.hidden {
   height: 0%;
 }
 
-#interactionIframe {
+.interactioniframe {
   position: absolute;
   width: 57%;
   top: 50%;
